<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#A8FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:background="@drawable/login_button"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.17000002"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="368dp"
        android:layout_height="121dp"
        android:contentDescription="@string/company_logo"
        android:scaleType="fitCenter"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfields"
        android:hint="@string/email_address"
        android:textColorHint="@color/purple_200"
        app:boxStrokeColor="#26212E"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:background="#00000000"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:importantForAutofill="yes"
            android:includeFontPadding="true"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/purple_200"
            app:textInputLayoutFocusedRectEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/textfields"
        android:hint="@string/password"
        android:textColorHint="@color/purple_200"
        app:boxStrokeColor="#26212E"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_200">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:background="#00000000"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:importantForAutofill="yes"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/purple_200"
            app:textInputLayoutFocusedRectEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="294dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="#A8FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/SignInButton"
        app:layout_constraintStart_toStartOf="@+id/SignInButton"
        app:layout_constraintTop_toBottomOf="@+id/SignInButton"
        app:layout_constraintVertical_bias="0.83"
        android:clickable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>