<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.MainActivity">


    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:background="@drawable/login_button"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="368dp"
        android:layout_height="121dp"
        android:contentDescription="@string/company_logo"
        android:scaleType="fitCenter"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textInputName"
        app:layout_constraintEnd_toEndOf="@+id/textInputName"
        app:layout_constraintStart_toStartOf="@+id/textInputName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfields"
        android:hint="@string/name"
        android:textColorHint="@color/purple_200"
        app:boxStrokeColor="#26212E"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutEmail"
        app:layout_constraintEnd_toEndOf="@+id/RegisterButton"
        app:layout_constraintStart_toStartOf="@+id/RegisterButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:background="#00000000"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:importantForAutofill="yes"
            android:includeFontPadding="true"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/purple_200"
            app:textInputLayoutFocusedRectEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfields"
        android:hint="@string/email_address"
        android:textColorHint="@color/purple_200"
        app:boxStrokeColor="#26212E"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCID"
        app:layout_constraintEnd_toEndOf="@+id/RegisterButton"
        app:layout_constraintStart_toStartOf="@+id/RegisterButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:background="#00000000"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:importantForAutofill="yes"
            android:includeFontPadding="true"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/purple_200"
            app:textInputLayoutFocusedRectEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCID"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfields"
        android:hint="@string/cid_number"
        android:textColorHint="@color/purple_200"
        app:boxStrokeColor="#26212E"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/RegisterButton"
        app:layout_constraintStart_toStartOf="@+id/RegisterButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:background="#00000000"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:importantForAutofill="yes"
            android:includeFontPadding="true"
            android:inputType="number"
            android:padding="20dp"
            android:textColor="@color/purple_200"
            app:textInputLayoutFocusedRectEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfields"
        android:hint="@string/password"
        android:textColorHint="@color/purple_200"
        app:boxStrokeColor="#26212E"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
        app:layout_constraintEnd_toEndOf="@+id/RegisterButton"
        app:layout_constraintStart_toStartOf="@+id/RegisterButton"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_200"
        app:layout_constraintVertical_bias="0.9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:background="#00000000"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:importantForAutofill="yes"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/purple_200"
            app:textInputLayoutFocusedRectEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>